--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Android1Lesson1">
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.profile_info_activity.ProfileInfoActivity"
+            android:exported="true" />
+        <activity
+            android:name=".ui.main_activity.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
